--- a/devtools/devtools-page.html
+++ b/devtools/devtools-page.html
@@ -1,17 +1,9 @@
 <!doctype html>
 
 <html>
-
-<head>
+  <head>
     <title>Cookie Inspector</title>
 
-    <script src="/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="/lib/object-watch.js" type="text/javascript"></script>
-    <script src="/js/cookie_helpers.js" type="text/javascript"></script>
-    <script src="/js/utils.js" type="text/javascript"></script>
-    <script src="/js/data.js" type="text/javascript"></script>
-
-    <script type="text/javascript" src="devtools-page.js"></script>
-</head>
-
+    <script type="module" src="devtools-page.js"></script>
+  </head>
 </html>
