--- a/options_main_page.html
+++ b/options_main_page.html
@@ -1,14 +1,7 @@
 <html>
-
-<head>
-    <script src="/lib/jquery-3.3.1.min.js" type="text/javascript"></script>
-
-    <script src="/js/utils.js" type="text/javascript"></script>
-    <script src="/js/options_main_page.js" type="text/javascript"></script>
+  <head>
+    <script type="module" src="/js/options_main_page.js"></script>
     <title>EditThisCookie</title>
-</head>
-
-<body>
-</body>
-
+  </head>
+  <body></body>
 </html>
