chore: update store links

--- a/options_pages/support.html
+++ b/options_pages/support.html
@@ -23,7 +23,7 @@
     </div>
 
     <div id="support-box" class="box">
-      <div class="linkify" lnk="https://chrome.google.com/webstore/detail/edit-this-cookie/fngmhnnpilhplaeedifhccceomclgfbg/reviews">
+      <div class="linkify" lnk="https://chromewebstore.google.com/detail/editthiscookie/ojfebgpkimhlhcblbalbfjblapadhbol/reviews">
         <div class="section-title" i18n="Rate_ETC"></div>
         <i style="color: #ff9d00; font-size: 4em; margin-top: 5px; margin-right: 5px" class="fa fa-star fa-fw"></i>
         <span i18n="Rate_Us_Intro"></span>
